--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "hbs": "^4.0.1",
     "jquery": "^3.3.1",
+    "nodemailer": "^4.6.4",
     "path": "^0.12.7",
     "popper.js": "^1.14.2"
   }
